fixed stackoverflow issue and added a loading screen when browser's getting location

--- a/imports/less/App.less
+++ b/imports/less/App.less
@@ -166,3 +166,21 @@ button {
         }
     }
 }
+
+.loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    z-index: 10000;
+    background: rgba(255, 255, 255, 0.8);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+    & img {
+        width: 150px;
+    }
+}
